[gd_scene load_steps=19 format=3 uid="uid://rworqhwqrtmt"]

[ext_resource type="Script" path="res://actors/mobs/brute/brute.gd" id="1_msyx4"]
[ext_resource type="Shape3D" uid="uid://cmcsjju7idrh4" path="res://actors/mobs/brute/brute_cylinder.tres" id="2_uprmj"]
[ext_resource type="Script" path="res://actors/components/hit_delegate.gd" id="3_rfg76"]
[ext_resource type="CylinderMesh" uid="uid://doo173limjd1o" path="res://actors/player/hook_shot/hook_shot_mesh.tres" id="4_0k0rj"]
[ext_resource type="Script" path="res://actors/components/actor_target_info.gd" id="5_urw3r"]
[ext_resource type="Script" path="res://zqf/zqf_nav_agent.gd" id="6_f3odt"]

[sub_resource type="CylinderMesh" id="CylinderMesh_qhyc6"]
top_radius = 2.0
bottom_radius = 2.0
height = 4.0
radial_segments = 16
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_obyom"]
albedo_color = Color(0.227451, 0.337255, 0.321569, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jywhf"]
size = Vector3(0.2, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mx3rv"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_26tli"]
size = Vector3(1, 1, 4)

[sub_resource type="BoxMesh" id="BoxMesh_3ksk7"]
size = Vector3(0.4, 0.025, 4)

[sub_resource type="Animation" id="Animation_f5xj0"]
resource_name = "idle"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1.8, 2, -3)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.683013, 0.183013, 0.183013, 0.683013)
tracks/2/type = "scale_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 1, 1, 1)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0.2, 1, 0)
tracks/4/type = "rotation_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/5/type = "scale_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_5hetv"]
resource_name = "stowed"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.2, 1, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/2/type = "scale_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 1, 1, 1)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0.2, 1, 0)
tracks/4/type = "rotation_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/5/type = "scale_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_rbfjd"]
resource_name = "swing_1"
length = 1.2
step = 0.025
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1.8, 2, -3, 0.2, 1, 3.8, 2, 1, 0.375, 1, 3.08879, 0.947282, 0.202528, 0.425, 1, 0.0887883, 0.947282, -2.79747, 0.525, 1, -2.57569, 1.87757, -0.47473, 0.65, 1, -3.41826, 3.02813, 0.651061, 0.8, 1, -1.41826, 2.02813, -2.34894, 1.2, 1, 1.8, 2, -3)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.683013, 0.183013, 0.183013, 0.683013, 0.2, 1, 0.768283, -0.388873, -0.294139, 0.41473, 0.375, 1, -0.617505, 0.0374042, 0.755949, -0.214079, 0.425, 1, 0.0728353, 0.0596559, 0.99548, 0.0125194, 0.525, 1, 0.755413, 0.0333306, 0.652408, 0.0510357, 0.65, 1, 0.699233, -0.349865, 0.494631, 0.379485, 0.8, 1, 0.73762, 0.0786489, 0.660971, 0.113352, 0.975, 1, 0.714497, -0.0236239, 0.0976469, 0.692388, 1.2, 1, 0.683013, 0.183013, 0.183013, 0.683013)
tracks/2/type = "scale_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 1, 1, 1, 1.2, 1, 1, 1, 1)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0.2, 1, 0, 1.2, 1, 0.2, 1, 0)
tracks/4/type = "rotation_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 1.2, 1, 0, 0, 0, 1)
tracks/5/type = "scale_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 1, 1, 1, 1.2, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_mjv3v"]
resource_name = "block"
length = 0.2
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1.8, 2, -3, 0.2, 1, 1.08972, 3.39785, -2.36868)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.683013, 0.183013, 0.183013, 0.683013, 0.2, 1, 0.232963, 0.562422, 0.732963, 0.303603)
tracks/2/type = "scale_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 1, 1, 1)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0.2, 1, 0)
tracks/4/type = "rotation_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/5/type = "scale_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_dqyvo"]
resource_name = "chop"
step = 0.025
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1.8, 2, -3, 0.3, 1, -0.165262, 6.01549, 0.471893, 0.4, 1, -0.127243, 3.94218, -3.59818, 0.45, 1, -0.0660225, -0.0573403, -2.59814, 0.7, 1, -0.0660225, -0.0573403, -2.59814, 1, 1, 1.8, 2, -3)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.683013, 0.183013, 0.183013, 0.683013, 0.3, 1, 0.688461, -0.677522, -0.183971, -0.182043, 0.4, 1, 0.503554, -0.496415, 0.504239, 0.49573, 0.45, 1, -0.000484143, -0.000484101, 0.712617, 0.701553, 0.7, 1, -0.000484143, -0.000484101, 0.712617, 0.701553, 1, 1, 0.683013, 0.183013, 0.183013, 0.683013)
tracks/2/type = "scale_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 1, 1, 1, 1, 1, 1, 1, 1)
tracks/3/type = "position_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0.2, 1, 0, 1, 1, 0.2, 1, 0)
tracks/4/type = "rotation_3d"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1)
tracks/5/type = "scale_3d"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hwjd5"]
_data = {
"block": SubResource("Animation_mjv3v"),
"chop": SubResource("Animation_dqyvo"),
"idle": SubResource("Animation_f5xj0"),
"stowed": SubResource("Animation_5hetv"),
"swing_1": SubResource("Animation_rbfjd")
}

[node name="brute" type="CharacterBody3D"]
collision_layer = 8
script = ExtResource("1_msyx4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = ExtResource("2_uprmj")

[node name="display" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="display"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("CylinderMesh_qhyc6")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_obyom")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="display"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.6, -1.6)
mesh = SubResource("BoxMesh_jywhf")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_mx3rv")

[node name="hitbox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_rfg76")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = ExtResource("2_uprmj")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="pods" type="Node3D" parent="."]

[node name="right" type="Node3D" parent="pods"]
transform = Transform3D(0.866025, 5.85623e-09, 0.5, 0.5, -2.18557e-08, -0.866025, 5.85623e-09, 1, -2.18557e-08, 1.8, 2, -3)

[node name="sword_area" type="Area3D" parent="pods/right"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="pods/right/sword_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
shape = SubResource("BoxShape3D_26tli")

[node name="MeshInstance3D" type="MeshInstance3D" parent="pods/right"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.2)
mesh = ExtResource("4_0k0rj")
metadata/_edit_lock_ = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="pods/right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
mesh = SubResource("BoxMesh_3ksk7")

[node name="left" type="Node3D" parent="pods"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="pods/left"]
transform = Transform3D(1, 0, 0, 0, -2.98023e-08, -1, 0, 1, -2.98023e-08, 0, 0, 0.2)
mesh = ExtResource("4_0k0rj")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="pods"]
autoplay = "swing_1"
libraries = {
"": SubResource("AnimationLibrary_hwjd5")
}

[node name="think_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="actor_target_info" type="Node" parent="."]
script = ExtResource("5_urw3r")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
script = ExtResource("6_f3odt")
